# finpeak

./: .gitignore  DEPLOYMENT.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/app/: auth.py  config.py  create_super_admin.py  database.py  dependencies.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: budgets.py  categories.py  reports.py  sheets.py  transactions.py  upload.py  users.py  wallets.py
backend/app/services/: insights.py  parsing.py  reports.py  sheets.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/budgets/: page.tsx
frontend/src/app/categories/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/app/wallets/: page.tsx
frontend/src/components/: AppShell.tsx  AuthProvider.tsx  DateRangePicker.tsx  Logo.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  supabase.ts  types.ts
kz_finance/: cli.py  test_accuracy.py
kz_finance/categorizer/: categories.json  extract_rules.py  llm.py  rules.py
kz_finance/export/: csv_export.py
kz_finance/parsers/: base.py  detect.py  forte.py  halyk.py  jusan.py  kaspi.py
kz_finance/reports/: summary.py
